--- a/conf/exp3.yaml
+++ b/conf/exp3.yaml
@@ -6,12 +6,14 @@ num_agents: 1
 num_landmarks: 1
 
 # configure map
-SIZE_X: 7
-SIZE_Y: 7
+SIZE_X: 9
+SIZE_Y: 9
 
 # configure agent
-hidden: 16
+hidden1: 16
+hidden2: 16
 gamma: 0.99
+tau: 0.001
 learning_rate: 1e-3
 betas: [0.9, 0.999]
 eps: 1e-8
@@ -23,7 +25,6 @@ batch_size: 64
 populate_steps: 1000
 capacity: 1000000
 decay_epochs: 2000
-synch_epochs: 10000
 
 # configure logs
 logs_on_termial: False
